@startuml clases

' ============================================================================
' CONFIGURACIÓN VISUAL
' ============================================================================
skinparam backgroundColor #FEFEFE
skinparam classAttributeIconSize 0
skinparam class {
    BackgroundColor<<Dominio>> #E3F2FD
    BackgroundColor<<Aplicacion>> #FFF3E0
    BackgroundColor<<Infraestructura>> #E8F5E9
    BackgroundColor<<Interfaz>> #FCE4EC
    BorderColor<<Dominio>> #1976D2
    BorderColor<<Aplicacion>> #E65100
    BorderColor<<Infraestructura>> #388E3C
    BorderColor<<Interfaz>> #C2185B
}

title Diagrama de Clases del Sistema\nPDF Extractor API

' ============================================================================
' CAPA DE DOMINIO
' ============================================================================

package "Dominio" <<Dominio>> {

    class Document {
        + checksum: str
        + extracted_text: str
        + created_at: datetime
        + id: str (optional)
        + to_dict(): dict
        + from_dict(data: dict): Document
    }

    abstract class DocumentRepository <<Repository>> {
        + save(document: Document): str
        + find_by_id(id: str): Document (optional)
        + find_by_checksum(checksum: str): Document (optional)
        + find_all(skip: int, limit: int): List~Document~
        + update(id: str, document: Document): bool
        + delete(id: str): bool
    }

    class PdfService {
        + process_pdf(bytes: bytes, filename: str): PdfProcessingResult
        - _calculate_checksum(bytes: bytes): str
        - _extract_text(bytes: bytes): str
    }

    class PdfProcessingResult {
        + filename: str
        + checksum: str
        + extracted_text: str
    }

    class PdfProcessingError {
        + message: str
    }
}

' ============================================================================
' CAPA DE APLICACIÓN
' ============================================================================

package "Aplicación" <<Aplicacion>> {

    class DocumentService {
        - repository: DocumentRepository
        - pdf_service: PdfService
        - checksum_service: ChecksumService
        + process_and_save(bytes: bytes, filename: str): ValidationResult
        + get_all(skip: int, limit: int): List~DocumentListDTO~
        + get_by_id(id: str): DocumentResponseDTO (optional)
        + update(id: str, text: str): DocumentResponseDTO (optional)
        + delete(id: str): bool
        + exists_by_checksum(checksum: str): bool
    }

    class ChecksumService {
        - repository: DocumentRepository (optional)
        + calculate_checksum(bytes: bytes): str
        + is_unique(checksum: str): bool
        + validate_and_create(dto: DocumentCreateDTO): ValidationResult
    }

    class DocumentCreateDTO {
        + file_bytes: bytes
        + extracted_text: str
    }

    class DocumentUpdateDTO {
        + extracted_text: str
    }

    class DocumentResponseDTO {
        + id: str
        + checksum: str
        + extracted_text: str
        + created_at: datetime
        + from_entity(document: Document): DocumentResponseDTO
    }

    class DocumentListDTO {
        + id: str
        + checksum: str
        + created_at: datetime
        + from_entity(document: Document): DocumentListDTO
    }

    class ChecksumValidationResult {
        + is_valid: bool
        + document: Document (optional)
        + error_message: str (optional)
    }

    class DocumentServiceError {
        + message: str
    }
}

' ============================================================================
' CAPA DE INFRAESTRUCTURA
' ============================================================================

package "Infraestructura" <<Infraestructura>> {

    class MongoDocumentRepository {
        - collection: AsyncIOMotorCollection
        + save(document: Document): str
        + find_by_id(id: str): Document (optional)
        + find_by_checksum(checksum: str): Document (optional)
        + find_all(skip: int, limit: int): List~Document~
        + update(id: str, document: Document): bool
        + delete(id: str): bool
        - _to_dict(document: Document): dict
        - _to_document(data: dict): Document (optional)
    }

    class Database {
        - instance: Database {static}
        - client: AsyncIOMotorClient
        + connect(): void
        + disconnect(): void
        + is_connected(): bool
        + get_collection(name: str): Collection
    }

    class Config {
        + mongodb_url: str
        + db_name: str
        + app_name: str
        + version: str
        + max_pdf_size_mb: int
    }
}

' ============================================================================
' CAPA DE INTERFAZ / API
' ============================================================================

package "API" <<Interfaz>> {

    class Routes {
        + list_documents(skip, limit): List~DocumentListDTO~
        + get_document(id): DocumentResponseDTO
        + update_document(id, data): DocumentResponseDTO
        + upload_document(file): DocumentResponseDTO
        + delete_document(id): void
        + health_check(): dict
    }

    class Dependencies {
        + get_repository(): DocumentRepository
        + get_document_service(): DocumentService
    }

    class MainApp {
        + create_app(): FastAPI
        + app: FastAPI
    }
}

' ============================================================================
' RELACIONES PRINCIPALES
' ============================================================================

' -- Inheritance --
MongoDocumentRepository ..|> DocumentRepository

' -- Composition --
DocumentService *-- DocumentRepository
DocumentService *-- PdfService
DocumentService *-- ChecksumService
ChecksumService *-- DocumentRepository
MongoDocumentRepository *-- Database

' -- Dependencies --
DocumentService ..> ChecksumValidationResult
DocumentService ..> DocumentResponseDTO
DocumentService ..> DocumentListDTO
ChecksumService ..> ChecksumValidationResult
Database ..> Config

' -- DTOs --
DocumentResponseDTO ..> Document
DocumentListDTO ..> Document

' -- API --
Routes ..> DocumentService
Routes ..> DocumentResponseDTO
Routes ..> DocumentListDTO
Dependencies ..> MongoDocumentRepository
Dependencies ..> DocumentService
MainApp ..> Routes
MainApp ..> Database

@enduml
